[workspace]
members = [
    "masluna_cli",
    "masluna_core", "masluna_js_to_wasm", 
    "masluna_ui"
]
resolver = "2"

[workspace.dependencies]
serde_json = { version = "1.0"}
serde = { version = "1.0", features = [ "derive "] }

thiserror = "2.0"

tokio = { version = "1.48" }

[workspace.lints.rust]
rust_2018_idioms = "deny"
# missing_docs = "deny"
missing_debug_implementations = "deny" # opt out where Debug is really redundant
future_incompatible = "deny"
unsafe-code = "deny"
