[package]
name = "masluna_ui"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Hosting application utulizing WASM"

[dependencies]
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
# Enable `gettext` feature if you need localization. Read about localizing slint apps here: https://docs.slint.dev/latest/docs/slint/guide/development/translations/
slint = { version = "1.14", features = [] }
rfd = { version = "0.16", default-features = false, features = [ "async-std", "wayland", "xdg-portal" ] } # I don't know why, but zbus thread always panics with tokio
dirs = { version = "6.0" }

tokio = { workspace = true, features = [ "rt-multi-thread", "sync" ] }
async-compat = "0.2"

[build-dependencies]
slint-build = "1.14"
